added max CPU threshold condition

--- a/watchdog.conf
+++ b/watchdog.conf
@@ -13,9 +13,13 @@ monitor_interval=10
 # After this many consecutive inactive checks, the watchdog will not be fed
 max_inactive_cycles=3
 
-# CPU activity threshold percentage
+# Minimum CPU activity threshold percentage
 # CPU usage above this percent is considered activity
 cpu_threshold=5.0
+
+# Maximum CPU threshold percentage
+# If CPU usage exceeds this percent, system will restart
+max_cpu_threshold=90.0
 
 # Memory activity threshold in bytes
 # Memory changes above this amount are considered activity
